--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<!--/ End Main Menu -->
 						</div>
 						<div class="col-lg-2 col-12">
-							<div class="get-quote" id="openPdfButton" data-bs-toggle="modal" data-bs-target="#brochureModal">
+							<div class="get-quote" id="openModalBtn" data-bs-toggle="modal" data-bs-target="#brochureModal">
 								<button class="btn" onclick="openBrochureModal()">Brochure</button>
 							</div>
 						</div>
@@ -120,6 +120,51 @@
 		<!--/ End Header Inner -->
 	</header>
 	<!-- End Header Area -->
+
+<!-- Modal to receive brochure -->
+<div class="modal fade" id="brochureModal" tabindex="-1" aria-labelledby="brochureModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="brochureModalLabel">Fill out the form to download the brochure</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="brochureRequestForm" class="form" action="https://formsubmit.co/harsiddhpharmaindustries@gmail.com" method="POST">
+                    <div class="form-group">
+                        <label for="companyName" class="form-label">Company Name:</label>
+                        <input type="text" id="companyName" name="companyName" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="contactPerson" class="form-label">Contact Person Name:</label>
+                        <input type="text" id="contactPerson" name="contactPerson" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="designation" class="form-label">Designation:</label>
+                        <input type="text" id="designation" name="designation" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="form-label">Email ID:</label>
+                        <input type="email" id="email" name="email" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="mobileNumber" class="form-label">Mobile Number:</label>
+                        <input type="tel" id="mobileNumber" name="mobileNumber" class="form-control" required>
+                    </div>
+					<input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">
+                    <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_template" value="table">
+                    <!-- Move the submit button inside the form -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 	<!-- Slider Area -->
 	<section class="slider">
@@ -821,8 +866,8 @@
 	<script src="js/bootstrap.min.js"></script>
 	<!-- Main JS -->
 	<script src="js/main.js"></script>
-	<!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script> -->
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script> 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-S0Z2tw1n1P8KDF1cbnN8K1jO6brH7F3w5l/2wF+5VMDqBC0SrBqV+B9Bk2K7wlgV" crossorigin="anonymous"></script> 
 
 	
@@ -853,15 +898,14 @@
 	</script>
 	<!--End of Tawk.to Script-->
 	<script>
-document.addEventListener('DOMContentLoaded', function () {
-    var myModalEl = document.getElementById('brochureModal');
-    myModalEl.addEventListener('show.bs.modal', function (event) {
-        // Add your code here to handle the modal opening
-        console.log('Modal is about to be shown');
-        // You can perform any actions you want here
-    });
-});
-
+		document.addEventListener('DOMContentLoaded', function () {
+			var myModalEl = document.getElementById('brochureModal');
+			myModalEl.addEventListener('show.bs.modal', function (event) {
+				// Add your code here to handle the modal opening
+				console.log('Modal is about to be shown');
+				// You can perform any actions you want here
+			});
+		});
 	</script>
 	
 	</body>
